# pyproject.toml

[build-system]
requires = ["setuptools>=58.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base62-py"
version = "1.3.14"
description = "Custom Base-62 Encoder in Python"
readme = "README.md"
authors = [{ name = "Cyril Dever", email = "cdever@pep-s.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "base62",
    "base-62",
    "encoder",
    "decoder"
]
dependencies = [
    "py-utls>=0.3.0"
]
requires-python = ">=3.10.2"

[project.urls]
Homepage = "https://github.com/cyrildever/base62"

[project.scripts]
base62-py = "base62.__main__:main"
